[project]
name = "currency-ai-agent"
version = "0.1.0"
description = "An AI agent that converts currency amounts and generates matching images and audio using LangGraph, Vertex AI, and GCP Text-to-Speech."
readme = "README.md"
requires-python = ">=3.9"
authors = ["Hemanta Kumar Sahu"]
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.29.0",
    "streamlit>=1.35.0",
    "langchain>=0.2.0",
    "langgraph>=0.0.32",
    "google-cloud-aiplatform>=1.48.0",
    "google-cloud-texttospeech>=2.16.1",
    "langchain-google-vertexai>=1.0.4",
    "vertexai>=0.1.1",
    "requests>=2.31.0",
    "pillow>=10.3.0"
]

[dependency-groups.dev]
dev = [
    "ruff>=0.3.0",
    "httpx>=0.27.0",
    "ipython>=8.24.0"
]
